name:                constructible-v
version:             0.1.0.0
synopsis:            adds constructors to V from linear
description:         Please see README.md
homepage:            https://github.com/bmabsout/constructible-v#readme
license:             BSD3
license-file:        LICENSE
author:              Bassel Mabsout
maintainer:          bmabsout@hotmail.com
copyright:           2017 Bassel Mabsout
category:            Vector
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ConstructibleV
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , vector
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/bmabsout/constructible-v
